2002-08-30  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated
	
	* configure.in: bump version to 2.1.0

	* pixmaps/gedit-logo.png: new logo

2002-08-28  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-08-26  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-08-25  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-08-24  James Willcox  <jwillcox@gnome.org>

	* configure.in:  added plugins/email/Makefile to AC_OUTPUT

2002-08-24  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: added plugins/indent/Makefile to AC_OUTPUT

2002-08-24  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-08-22  Mikael Hallendal  <micke@codefactory.se>

	* help/C/gedit-C.omf: revered my category change. Thanks Irene for
	  pointing out the new category.

2002-08-21  Mikael Hallendal  <micke@codefactory.se>

	* help/C/gedit-C.omf: fixed the ScrollKeeper category. Now in
	  GNOME|Applications.
	
2002-08-20  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.0.3

2002-08-16  Paolo Maggi  <maggi@athena.polito.it>

	* data/gedit.desktop.in: added a semicolon at the end of
	the categories list (thanks to Havoc Pennington for the 
	patch)

2002-07-24  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 2.0.2 released ]

2002-07-24  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.0.2

2002-07-18  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-17  James Willcox  <jwillcox@cs.indiana.edu>

	* configure.in:  Added AM_DISABLE_STATIC, which disables the building
	of static libraries (for plugins).

2002-07-16  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-15  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 2.0.1 released ]

2002-07-15  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.0.1

2002-07-12  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated
