@@ -26,7 +26,7 @@ Normal tasks
 [ ] Bug #77184 Undo should manage "need-saving" flag (Resp: Paolo)
 [ ] Implementing a tools plugin (Resp: James Willcox)
 [ ] Implementing a template plugin (Resp: Paolo)
-[ ] Fixing encoding related bugs (Resp: Paolo)
+[A] Fixing encoding related bugs (Resp: Paolo, assigned to Paolo)
 [ ] Improving the tag list plugin (Resp: Paolo)
 [ ] Saving file using gnome-vfs (Resp: Paolo)
 [ ] Implementing a regex search plugin (Resp: Paolo)
@@ -39,7 +39,7 @@ Easy tasks
 ----------
 
 [A] Improving the time plugin (Resp: Paolo, assigned to Lee Mallabone <lee@fonicmonkey.net>)
-[A] Close button on the tabs, like in galeon (Assigned to James W.)
+[X] Close button on the tabs, like in galeon (Assigned to James W.)
 [ ] Improving preferences management in existing plugins (Resp: Paolo)
 [X] Implementing an indent plugin (Assigned to Paolo)
 
