@@ -1,5 +1,10 @@
 2002-08-30  Paolo Maggi  <maggi@athena.polito.it>
 
+	* data/gedit.schemas.in: added and entry for 
+	preferences/editor/load/encodings key
+
+2002-08-30  Paolo Maggi  <maggi@athena.polito.it>
+
 	* TODO: Updated
 	
 	* configure.in: bump version to 2.1.0
